gccida/g2/ix86_expand_prologue
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_expand_prologue/src/i386.c:4706:21: error: use of undeclared identifier 'machine_mode'
v4 = gen_rtx_REG( ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), v3); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_expand_prologue/src/i386.c:4733:36: error: use of undeclared identifier 'machine_mode'
v14 = gen_rtx_fmt_s( SYMBOL_REF, ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), "_alloca"); 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_expand_prologue/src/i386.c:4737:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v18 = (  struct rtx_def *)v17[4]; 
                          ^~~~~~
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_expand_prologue/src/obj/i386.o] Error 1
